# scraping34

./: .gitignore  LICENSE  README.md  REAMDE.md  pyproject.toml  requirements.txt
scraping34/: core.py
src/: __init__.py  __main__.py
src/scraping34/: __init__.py  scraping34.py
src/scraping34.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
