[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scraping34"
version = "1.0.1"
description = "Python library and CLI for scraping images from rule34.gg"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "httpx",
    "beautifulsoup4",
    "pillow",
]

[project.scripts]
scraping34 = "scraping34.scraping34:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]